change pages themem to iLotus by Zhanxin

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 友情链接
+title: 关于我
 description: Junkor's Tech blog by github pages.
 keywords: Swift, Functional, Programming, iOS, Cocoa, CocoaTouch, GitHub, Jekyll, Archives, Quotes, geek, pages
 ---
@@ -11,6 +11,7 @@ keywords: Swift, Functional, Programming, iOS, Cocoa, CocoaTouch, GitHub, Jekyll
     {{ page.title }}
 </p>
 
-<h1 class="lotus-pagetit">Links</h1>
+<h1 class="lotus-pagetit">About</h1>
 <article id="about">
+    <p>这里是个人的介绍</p>
 </article>
