changed themem complete

--- a/contact.html
+++ b/contact.html
@@ -13,5 +13,19 @@ keywords: Swift, Functional, Programming, iOS, Cocoa, CocoaTouch, GitHub, Jekyll
 
 <h1 class="lotus-pagetit">About</h1>
 <article id="about">
-    <p>这里是个人的介绍</p>
+    <p>Hi, I'm Junkor.</p>
+	<p>或许有些时候不爱说话，<br/>
+	   或许有些时候不会说话，<br/>
+	   或许有些时候非常忙碌，<br/>
+	   或许有些时候稍稍空闲；<br/>
+	   时常在思索，<br/>
+	   时常在阻塞，<br/>
+	   时常在循环，<br/>
+	   时常在困惑；<br/>
+	   <br/>
+	   忧郁、困惑、偏激、内敛、迟疑、好学？<br/>
+	   默默、喜悦、犯二、阳光、做作、虚伪？<br/>
+	   真实、幼稚、怜悯、乐观、谦虚、无趣？<br/>
+	   坦然、平淡、简单、自由、中庸、脆弱。<br/>
+	</p>
 </article>
