--- a/links.html
+++ b/links.html
@@ -13,4 +13,18 @@ keywords: Swift, Functional, Programming, iOS, Cocoa, CocoaTouch, GitHub, Jekyll
 
 <h1 class="lotus-pagetit">Links</h1>
 <article id="about">
+	<lu>
+		<li>
+			<a href="http://http://objccn.io">objc</a>
+		</li>
+		<li>
+			<a href="http://http://objccn.io">objccn</a>
+		</li>
+		<li>
+			<a href="http://swifter.tips">swifter.tips</a>
+		</li>
+		<li>
+			<a href="http://http://junkor.me">junkor.me</a>
+		</li>
+	</lu>
 </article>
