add email to contact

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@ keywords: Swift, Functional, Programming, iOS, Cocoa, CocoaTouch, GitHub, Jekyll
 
 <h1 class="lotus-pagetit">About</h1>
 <article id="about">
-    <p>Hi, I'm Junkor.</p>
+    <p>Hi, I'm Junkor.Touch me by email: jun#junkor.me(replace # by @)</p>
 	<p>或许有些时候不爱说话，<br/>
 	   或许有些时候不会说话，<br/>
 	   或许有些时候非常忙碌，<br/>
