--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ keywords: Swift, Functional, Programming, iOS, Cocoa, CocoaTouch, GitHub, Jekyll
 <section class="lotus-logo fn-clear">
     <hgroup class="violet-site">
         <h1><a href="{{ site.url }}" >{{ site.title }}</a></h1>
-        <h2>{{ site.subTitle }}<a href="{{ site.url }}/feed.xml">_RSS</a></h2>
+        <h2>{{ site.subTitle }}&nbsp&nbsp<a href="{{ site.url }}/feed.xml">RSS</a></h2>
     </hgroup><!-- //violet-site -->
 </section>
 <article class="lotus-article">
